Add fallback link for Cult of Kitteh

--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Spiritual successor of FrogCraft and FrogCraft-Rebirth.
 
 No GUI, thus a follower of Cult of Kitteh.
 Get more info at http://asie.pl/kitteh/
+(No more available, use https://web.archive.org/web/20151103083555/http://asie.pl/kitteh/ for now)
 
 No progress. Even a bit. No. Just no progress.
 You might be able to see some code but that is all your illusion. 
